<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="mdns_service_name">elan-next-song</string>
    <string name="mdns_service_type">_http._tcp.local.</string>
    <string name="font_name">DejaVuSansMono.ttf</string>
    
    <string name="app_name">ElanSender</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    
    <string name="key1">1</string>
    <string name="key2">2</string>
    <string name="key3">3</string>
    <string name="key4">4</string>
    <string name="key5">5</string>
    <string name="key6">6</string>
    <string name="key7">7</string>
    <string name="key8">8</string>
    <string name="key9">9</string>
    <string name="key0">0</string>
    <string name="keyC">C</string>
    <string name="keyS">S</string>
    <string name="keyBlack">off</string>
    <string name="keyNext">next</string>
    
    <string name="label_ok">Okay</string>
    <string name="label_cancel">Cancel</string>
    
    <string name="message_activate_service">Please activate streaming service on tablet, then press okay.</string>
    <string name="message_ap_not_enabled">WiFi access point not enabled.</string>
    <string name="message_device_not_reachable">Connected device(s) not reachable.</string>
    <string name="message_error_device">Error sending message to device</string>
    <string name="message_error_sending">Error sending message.</string>
    <string name="message_error_service">Error finding service.</string>
    <string name="message_no_device">No device connected.</string>
    <string name="message_no_device_refresh">No device connected. Please refresh.</string>
    <string name="message_no_network">No WiFi network available.</string>
    <string name="message_no_service">No service found.</string>
    <string name="message_port_error">Error with specified port.</string>
    <string name="message_progress_searching">Searching&#8230;</string>
    <string name="message_progress_text">Searching for services in local wireless network.</string>
    <string name="message_no_device_configured">No proper address configured.</string>

    <string name="status_ap_not_enabled">WiFi access point not enabled.</string>
    <string name="status_connected_devices">Connected devices:</string>

    <string name="title_activity_import">Import song list</string>
</resources>