<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_column="0"
    android:layout_gravity="left"
    android:layout_row="0"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ElanSender" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="bottom|right" >
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
        <TextView
            android:id="@+id/textViewLast"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="bottom|right"
            android:textSize="18pt" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
        <TextView
            android:id="@+id/textViewAct"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_weight="0.5"
            android:gravity="bottom|right"
            android:textColor="#DD0000"
            android:textSize="22pt" />
		<Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/key1"
            android:textSize="22pt" />
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/key2"
            android:textSize="22pt" />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/key3"
            android:textSize="22pt" />
		<Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/key4"
            android:textSize="22pt" />
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/key5"
            android:textSize="22pt" />
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/key6"
            android:textSize="22pt" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/key7"
            android:textSize="22pt" />
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/key8"
            android:textSize="22pt" />
        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/key9"
            android:textSize="22pt" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/keyC"
            android:textSize="22pt" />
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/key0"
            android:textSize="22pt" />
        <Button
            android:id="@+id/buttonS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/keyS"
            android:textSize="22pt" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
    </LinearLayout>
    
    <LinearLayout
      	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
		<Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
		<Button
            android:id="@+id/buttonBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/keyBlack"
            android:textSize="18pt" />
		<Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/keyNext"
            android:textSize="18pt" />
		<Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.125" />
    </LinearLayout>
    
	<LinearLayout
      	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="bottom|right"
            android:textSize="6pt" />
    </LinearLayout>
</LinearLayout>